bug: Fix portfolio bugs
Fix resizing overlaps with portfolio cards and center them.

--- a/website-portfolio/src/App.css
+++ b/website-portfolio/src/App.css
@@ -69,7 +69,9 @@ html {
 
 .card {
   position: relative;
-  width: 300px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 300px;
   height: 200px;
   overflow: hidden;
   border-radius: 10px;
@@ -78,7 +80,7 @@ html {
 
 .card-skills {
   position: relative;
-  margin-left:25px;
+  margin-left: 25px;
   width: 110px;
   height: 110px;
   overflow: hidden;
@@ -96,15 +98,61 @@ html {
 .overlay-content {
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.7);
+  color: white; 
   transition: opacity 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
+  font-size: 1em;
+  position: absolute; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; 
+  box-sizing: border-box; 
 }
 
 .card:hover .card-img {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
 
 .card:hover .overlay-content {
   opacity: 1;
+}
+
+@media (max-width: 1600px) {
+  .overlay-content {
+    font-size: 1em; 
+  }
+}
+
+@media (max-width: 1200px) {
+  .overlay-content {
+    font-size: .8em; 
+  }
+}
+
+@media (max-width: 992px) {
+  .overlay-content {
+    font-size: .8em; 
+  }
+}
+
+@media (max-width: 768px) {
+  .overlay-content {
+    font-size: 1em; 
+  }
+}
+
+.overlay-content .d-flex {
+  gap: 1rem; 
+}
+
+.overlay-content i {
+  font-size: 1.5em; 
 }
 
 @keyframes scrollInLeft {
